--- a/newuser.html
+++ b/newuser.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="js/NewUser.js"></script>
     </head>
     <body class="LoginBody">
-        <div class="Accedi">
+        <div class="NewUser">
             <div class="AccediContainer">
                 <img class="ZAMLogo" src = "svg/ZAM.svg">
                 <h1 class="AccediTextTitolo" style="font-size: 33px;font-weight: 100;font-family: SF_Pro_Display_Regular;">Creazione utente</h1>
