more booking methods!!!

--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -36,8 +36,16 @@
                 <zam-back onclick="Helpers.redir('./index.html')"></zam-back>
                 <zam-title>Prenotazioni</zam-title>
             </zam-row>
-            <h1>Le mie prenotazioni</h1>
+
+            <zam-title>Le mie prenotazioni</zam-title>
             <zam-row cards id="prenotazioni"></zam-row>
+
+            <zam-spacer></zam-spacer>
+
+            <zam-title>Cronologia</zam-title>
+            <zam-row cards id="cronologia"></zam-row>
+
+            <zam-spacer></zam-spacer>
         </zam-body>
     </body>
 </html>
