inizio pagina utente, reload dopo modifica prenotazione

--- a/edituser.html
+++ b/edituser.html
@@ -25,7 +25,7 @@
                 </select>
                 <div row>
                     <zam-spacer></zam-spacer>
-                    <input disabled class="LoginButton" id="zam-submit" type="submit" value="Crea utente">    
+                    <input disabled class="LoginButton" id="zam-submit" type="submit" value="Modifica utente">    
                 </div>
             </form>
             <zam-spacer></zam-spacer>
