vista "occupati" nelle prenotazioni

--- a/account.html
+++ b/account.html
@@ -25,6 +25,7 @@
         <script type="text/javascript" src="js/ZamIcon.js"></script>
         <script type="text/javascript" src="js/ZAMConditional.js"></script>
         <script type="text/javascript" src="js/ZAMAccount.js"></script>
+        <script type="text/javascript" src="js/ZAMPicker.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
