--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="js/Login.js"></script>
         <script type="text/javascript" src="lib/zamcaptcha-js/js/zamcaptcha.js"></script>
         <script type="text/javascript" src="js/Landing.js"></script>
+        <script type="text/javascript" src="js/ZAMPicker.js"></script>
     </head>
     <body class="LoginBody">
         <div id="Landing">
