--- a/dipendente.html
+++ b/dipendente.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src="js/Sidebar.js"></script>
         <script type="text/javascript" src="js/ZamIcon.js"></script>
+        <script type="text/javascript" src="js/ZAMPicker.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
