--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="lib/zam-map/zam-map.js"></script>
         <script type="text/javascript" src="js/ZAMConditional.js"></script>
         <script type="text/javascript" src="js/HomePage.js"></script>
+        <script type="text/javascript" src="js/ZAMPicker.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
