--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="js/ZAMBookingCard.js"></script>
         <script type="text/javascript" src="js/BookingSidebar.js"></script>
         <script type="text/javascript" src="js/Prenotazioni.js"></script>
+        <script type="text/javascript" src="js/ZAMPicker.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
